add business logic for ticket object and select and text forms in html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
 </head>
 <body>
   <div class="container">
-    
+    <form id="new-ticket">
+      <select class="form-control" id="title">
+        <option value="avatar-2">Avatar 2</option>
+        <option value="sonic">Sonic the Hedgehog</option>
+        <option value="the-quiet-place">The Quiet Place</option>
+        <option value="artemis-fowl">Artemis Fowl</option>
+      </select>
+      <select class="form-control" id="time">
+        <option value="morning">Morning</option>
+        <option value="afternoon">Afternoon</option>
+        <option value="evening">Evening</option>
+        <option value="night">Night</option>
+      </select>
+      <div class="form-group">
+        <label for="age">Enter your age:</label>
+        <input id="age" class="form-control" type="number" required>
+      </div>
+    </form>
   </div>
 </body>
 </html>
